Acomodo de elementos

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 
 .flexContainer{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .flexCifrado{
@@ -20,4 +23,3 @@
 .flexDescifrado{
     flex: 50%;
 }
-
